--- a/src/styles/cube3D.scss
+++ b/src/styles/cube3D.scss
@@ -85,8 +85,13 @@
     cursor: pointer;
 
     &:hover {
-      .piece__sticker {
-        opacity: 0.7;
+      .piece__sticker::before {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: white;
+        opacity: 0.3;
       }
     }
   }
